# MountLuksVolumes

./: CMakeLists.txt  dialog.glade  dialog.glade~  main.cpp
